--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>BOWSERTEST</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>BOWSERTEST</name>
+  <name>BowserBuild</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
