--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.madion</groupId>
-  <artifactId>BOWSERTEST</artifactId>
+  <artifactId>BowserBuild</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>BOWSERTEST</name>
@@ -40,6 +40,11 @@
     <artifactId>javaee-web-api</artifactId>
     <version>7.0</version>
   </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.apache.maven.archetypes/maven-archetype-bundles -->
   <dependency>
@@ -65,7 +70,7 @@
 
 
   <build>
-    <finalName>BOWSERTEST</finalName>
+    <finalName>BowserBuild</finalName>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
