--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,11 @@
   <name>BowserBuild</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-
+  <dependency>
+    <groupId>jstl</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+  </dependency>
   <dependency>
     <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-engine</artifactId>
