--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
   <url>http://maven.apache.org</url>
   <dependencies>
   <dependency>
+    <groupId>org.glassfish.jersey.core</groupId>
+    <artifactId>jersey-client</artifactId>
+    <version>2.23.2</version>
+  </dependency>
+  <dependency>
     <groupId>jstl</groupId>
     <artifactId>jstl</artifactId>
     <version>1.2</version>
